# virtual-library

./: .gitignore  AGENT_NOTES.md  PHASES_B_TO_E.md  PRODUCT_DECISIONS.md  README.md  REDESIGN_PLAN.md  ROADMAP.md  content  index.html  package-lock.json  package.json  playwright.config.js  quartz.config.ts  quartz.layout.ts  tailwind.config.js  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  deploy.yaml
content/: about.md  index.md
content/posts/: Doors in Walls.md  on-armadillos.md  on-bridges.md  on-cartography.md  on-cathedrals.md  on-clocks.md  on-fermentation.md  on-lighthouses.md  on-migration.md  on-mycorrhizae.md  on-soil.md  on-stone-walls.md  on-tides.md  on-typewriters.md  on-whittling.md
content/reading/: antifragile.md  blood-meridian.md  dune.md  the-selfish-gene.md  the-structure-of-scientific-revolutions.md  thinking-fast-and-slow.md
content/templates/: Post.md  Reading Note.md
docs/: TODOS.md  desktop-hardening-runbook.md
docs/plans/: 2026-03-04-archive-and-garden-design.md  2026-03-04-archive-and-garden-implementation.md  2026-03-04-delight-phase-2-design.md  2026-03-04-delight-phase-2-implementation.md  2026-03-04-homepage-shelf-and-catalog-archive-design.md  2026-03-04-implementation-plan.md  README.md  (+4 more)
e2e/: app-smoke.spec.js
scripts/: desktop-launch-smoke.mjs  desktop-smoke.mjs  desktop-verify.mjs  desktop-verify.test.mjs  playwright-test.mjs  validate-tokens.sh
src/: App.jsx  App.sync-warning.test.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  lib.rs  vault.rs
(+239 files in other folders)
