[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
  "path-all",
  "dialog-all",
  "fs-copy-file",
  "fs-create-dir",
  "fs-exists",
  "fs-read-file",
  "fs-read-dir",
  "fs-rename-file",
  "fs-write-file",
] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.13"
